fix margin on small screen

--- a/_assets/stylesheets/pages/_locations.scss
+++ b/_assets/stylesheets/pages/_locations.scss
@@ -58,6 +58,7 @@
       z-index: 1;
       left: 50%;
       margin-left: -175px;
+      margin-right: 0px;
 
       p {
         font-size: 11px;
